k8s/apps/visual-regression-tracker/api/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: visual-regression-tracker-api-ingress
  namespace: visual-regression-tracker
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: visual-regression-tracker-api
      app.kubernetes.io/name: visual-regression-tracker-api
  policyTypes:
    - Ingress
